<resources>
    <string name="app_name">Wearther</string>
    <string name="bien_message">Bien</string>
    <string name="chaud_message">Chaud</string>
    <string name="froid_message">Froid</string>
    <string name="fermer_message">Fermer</string>
    <string name="sous_titre_message">Sous-titre</string>
    <string name="titre_defaut_message">Titre par défaut</string>
    <string name="login_message">Bon retour sur Wearther, connectez-vous</string>
    <string name="pseudonyme_message">Pseudonyme</string>
    <string name="mdp_message">Mot de passe</string>
    <string name="connexion_message">Connexion</string>
    <string name="nouveau_message">Nouveau ? Inscrivez-vous !</string>
    <string name="signup_message">Bienvenue sur Wearther ! Inscrivez-vous</string>
    <string name="inscription">Inscription</string>
    <string name="ancien_message">Déjà un compte ? Connectez-vous</string>
</resources>