<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:gravity="center_horizontal"
        android:paddingVertical="70dp"
        android:text="@string/login_message"
        android:textAlignment="center"
        android:textColor="@color/white_font"
        android:textSize="23sp"
        android:fontFamily="cursive"
        android:background="@color/blue_back"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/pseudonyme_message"
        android:textColor="@color/poulpi_blue"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="206dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="225dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/mdp_message"
        android:textColor="@color/poulpi_blue"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="298dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="317dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="195dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/connexion_message"
        android:textColor="@color/white_font"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="378dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nouveau_message"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="440dp" />



</androidx.constraintlayout.widget.ConstraintLayout>